Criação do Aplicativo

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,76 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="warning">
     <ion-title>
-      Tab 1
+      Filmes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+
+    <ion-row>
+
+      <ion-col size="6">
+        <h1>Sonic: O filme</h1>
+        <h2>12 de fevereiro de 2020</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/Kt9iFdTu5TbAm7tNfc876mrWU.jpg">
+        <p>Depois de descobrir um ouriço pequeno, azul e rápido, um policial de uma pequena cidade 
+          deve ajudá-lo a derrotar um gênio do mal que deseja fazer experiências com…</p>
+          <ion-button expand="block" fill="outline" color="warning">Mais informações</ion-button>
+      </ion-col>
+      
+      <ion-col size="6">
+        <h1>Truque de Mestre</h1>
+        <h2>29 de maio de 2013</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/tcHJtUvWYDOByj1m5ZIEaXPt3DD.jpg">
+        <p>Um agente do F.B.I. e uma detetive da Interpol rastreiam uma equipe de ilusionistas que realizam assaltos a bancos durante suas apresentações e recompensam seu…</p>
+          <ion-button expand="block" fill="outline" color="warning">Mais informações</ion-button>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+
+      <ion-col size="6">
+        <h1>Como eu era antes de Você</h1>
+        <h2>1 de junho de 2016</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/3WMts1hmXf7pjqtw7IPtTCf1OYw.jpg">
+        <p>Will é um garoto rico e bem-sucedido, até sofrer um grave acidente que o deixa preso a uma cadeira de rodas. Ele está profundamente depressivo e contrata uma garota…</p>
+          <ion-button expand="block" fill="outline" color="warning">Mais informações</ion-button>
+      </ion-col>
+
+      <ion-col size="6">
+        <h1>Os Delírios de Consumo de Becky Bloom</h1>
+        <h2>5 de fevereiro de 2009</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/v3XGwmA4m2bEi9w9zmllJliEx7a.jpg">
+        <p>Nova York. Rebecca Bloomwood (Isla Fisher) é uma garota que adora fazer compras e seu vício a leva à falência. Seu grande sonho é um dia trabalhar em sua revista…</p>
+          <ion-button expand="block" fill="outline" color="warning">Mais informações</ion-button>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+
+      <ion-col size="6">
+        <h1>Parasita</h1>
+        <h2>30 de maio de 2019</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/bNGW8zYA91VqTZfV3jnKHPEKKvB.jpg">
+        <p>Toda a família de Ki-taek está desempregada, vivendo num porão sujo e apertado. Uma obra do acaso faz com que o filho adolescente da família comece a dar aulas de…</p>
+          <ion-button expand="block" fill="outline" color="warning">Mais informações</ion-button>
+      </ion-col>
+
+      <ion-col size="6">
+        <h1>Terremoto: A Falha de San Andreas</h1>
+        <h2>27 de maio de 2015</h2>
+        <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/urVkonkjHkf28r47NNb4Az9NxU7.jpg">
+        <p>Um forte terremoto atinge a Califórnia e faz com que Ray (Dwayne Johnson), um bombeiro especializado em resgates com helicópteros, tenha que percorrer o estado ao…</p>
+          <ion-button expand="block" fill="outline" color="warning">Mais informações</ion-button>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
 </ion-content>
