--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,62 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-title>
-      Tab 2
+      Séries
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>12 de outubro de 2018</ion-card-subtitle>
+      <ion-card-title>Titãs</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/eeHI5iBSCOxj4HGSOmFM6azBmwb.jpg">
+    <p>Uma equipe de jovens super-heróis liderada por Asa Noturna (anteriormente Robin de Batman) forma para combater o mal e outros perigos.</p>
+    <ion-button expand="block" fill="outline" color="danger">Mais informações</ion-button>
+    </ion-card-content>
+  </ion-card>]
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>19 de setembro de 2005</ion-card-subtitle>
+      <ion-card-title>How I Met Your Mother</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/sidx8cEiYG1ZBwzyF5wiXFaBm6Q.jpg">
+    <p>No ano de 2030, Ted Mosby, um arquiteto, decide explicar a seus filhos a história de como ele conheceu a mãe deles. Tudo começou em 2005, quando um de seus amigos…</p>
+    <ion-button expand="block" fill="outline" color="danger">Mais informações</ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>4 de abril de 2013</ion-card-subtitle>
+      <ion-card-title>Hannibal</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/fGLfnAGlxrvWKleEpjDUXAGeBNO.jpg">
+    <p>Um dos personagens mais fascinantes da literatura e do cinema chega à televisão pela primeira vez: o psiquiatra e assassino em série Dr. Hannibal Lecter. No novo…</p>
+    <ion-button expand="block" fill="outline" color="danger">Mais informações</ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>20 de dezembro de 2019</ion-card-subtitle>
+      <ion-card-title>The Witcher</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/A2oBYUKgjdy0UeIP88kkdyjw8z6.jpg">
+    <p>O mutante Geralt de Rívia é um caçador de monstros que luta para encontrar seu lugar num mundo onde as pessoas muitas vezes são mais perversas que as criaturas selvagens.</p>
+    <ion-button expand="block" fill="outline" color="danger">Mais informações</ion-button>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
